[tool.poetry]
name = "correlation-sketches-mi"
version = "0.1.0"
description = ""
authors = ["Aécio Santos <aecio.solando@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
altair = "^4.1.0"
altair-data-server = "^0.4.1"
altair-saver = "^0.5.0"
vega = "^3.5.0"
vega-datasets = "^0.9.0"
jupyter = "^1.0.0"
matplotlib = "^3.4.2"
pandas = "^1.2.4"
numpy = "^1.20.3"
scipy = "^1.6.3"
scikit-learn = "^1.0.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
